# product-experimentation-recs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_baseline_recommendations.ipynb  03_genre_personalization.ipynb  04_content_feature_evaluation.ipynb  05_hybrid_model_selection.ipynb  06_offline_policy_comparison.ipynb
scripts/: fetch_tmdb_metadata.py
src/: content.py  data.py  experiments.py  metrics.py  recommenders.py  tmdb.py
tests/: test_content.py  test_data.py  test_experiments.py  test_metrics.py  test_recommenders.py
